# raythm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SpecificationSheet.md  refactor-research-2026-6-19.md
.claude/: settings.local.json
.codex/: .gitignore
.codex/memories/: issue-99-update.json  play-scene-refactor-issue.md  settings-scene-refactor-issue.md  song-select-scene-refactor-issue.md
.codex/rules/: default.rules
.github/workflows/: discord-notify.yml  windows-release.yml
assets/charts/: parser_invalid_metadata.chart  parser_valid.chart
assets/fonts/: japanese_full.SOURCE.txt  ui_sdf.rfont
assets/icons/: raythm_icons.json
cmake/: convert_png_to_ico.ps1  generate_windows_app_icon_rc.cmake
docs/: class-diagram.md  event-input-verification.md  index.html  styles.css  ui-layout-system.md
docs/privacy-policy/: index.html
documents/: ArchitectureBoundaries.md  Issue384CompletionMatrix.md  SpecificationSheet.md  auto-update-flow.md  content-storage-and-song-catalog.md  download-screen-draft.md  download-screen-visual-draft.md  friend-feature-requirements.md  friend-feature-task-breakdown.md  index.html  metadata-flow-normalization.md  multiplayer-flow.md  mv-composition-redesign-plan.md  mv-script-samples.rmv  ranking-submission-flow.md  seamless-song-select-draft.md  seamless-song-select-visual-draft.md  title-hub-refactor-plan.md  title-hub-refactor-verification.md  ui-layout-system.md
libs/bass/: bass.h
src/: audio.cpp  audio.h  chart_parser.cpp  chart_parser_smoke.cpp  data_models.h  game_scenes.cpp  game_scenes.h  input_handler.cpp  input_handler_smoke.cpp  judge_system.cpp  judge_system.h  launcher_main.cpp  main.cpp  play_scene.cpp  scene_common.h  score_system.cpp  song_loader.h  song_loader_smoke.cpp  song_select_scene.h  timing_engine.cpp  title_scene.cpp  updater_main.cpp
src/audio/: audio.cpp  audio.h  audio_loudness.cpp  audio_loudness.h  audio_manager.cpp  audio_manager.h  audio_waveform.cpp  audio_waveform.h  bass_path.h
src/core/: app_paths.cpp  app_paths.h  content_cache_paths.cpp  content_cache_paths.h  file_dialog.cpp  file_dialog.h  file_io.h  load_progress.h  local_catalog_signature.cpp  local_catalog_signature.h  local_sqlite.cpp  local_sqlite.h  official_content_sync.cpp  official_content_sync.h  path_utils.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  tween.h  uuid_util.h  window_dialog_support.cpp  window_dialog_support.h
src/editor/: editor_meter_map.cpp  editor_meter_map.h  editor_state.cpp  editor_state.h  editor_timeline_view.cpp  editor_timeline_view.h  editor_timing_panel.cpp  editor_timing_panel.h
src/font_atlas/: font_atlas_generator.cpp
src/gameplay/: chart_difficulty.cpp  chart_difficulty.h  chart_file_storage.cpp  chart_file_storage.h  chart_fingerprint.cpp  chart_fingerprint.h  chart_identity_store.cpp  chart_identity_store.h  chart_judge_events.cpp  chart_judge_events.h  chart_level_cache.cpp  chart_level_cache.h  chart_level_memory_cache.cpp  chart_level_memory_cache.h  chart_parser.cpp  chart_parser.h  chart_rc_calculator.cpp  chart_rc_calculator.h  chart_serializer.cpp  chart_serializer.h  game_settings.h  input_handler.cpp  input_handler.h  judge_system.cpp  judge_system.h  key_names.h  lane_input_tracker.cpp  lane_input_tracker.h  performance_system.cpp  performance_system.h  play_mods.h  player_note_offsets.cpp  player_note_offsets.h  ranking_service.cpp  ranking_service.h  score_system.cpp  score_system.h  scoring_ruleset_runtime.cpp  scoring_ruleset_runtime.h  settings_io.cpp  (+9 more)
src/localization/: localization.cpp  localization.h
src/models/: content_lifecycle.h  data_models.h  online_content_identity.h
src/mv/: mv_managed_storage.cpp  mv_managed_storage.h  mv_runtime.cpp  mv_runtime.h  mv_script_editor_style.cpp  mv_script_editor_style.h  mv_script_panel.cpp  mv_script_panel.h  mv_storage.cpp  mv_storage.h
src/network/: auth_client.cpp  auth_client.h  friend_client.cpp  friend_client.h  friend_client_parser.cpp  friend_client_parser.h  http_client.cpp  http_client.h  json_helpers.cpp  json_helpers.h  multiplayer_client.cpp  multiplayer_client.h  network_error.cpp  network_error.h  ranking_client.cpp  ranking_client.h  server_environment.cpp  server_environment.h  unlock_rule_client.cpp  unlock_rule_client.h  websocket_client.cpp  websocket_client.h
src/platform/: window_chrome.cpp  window_chrome.h  windows_app_icon.cpp  windows_app_icon.h  windows_app_icon.rc.in  windows_input_source.cpp  windows_input_source.h
src/scenes/: editor_scene.cpp  editor_scene.h  multiplayer_result_scene.cpp  multiplayer_result_scene.h  mv_editor_context_menu_view.cpp  mv_editor_context_menu_view.h  mv_editor_inspector_view.cpp  mv_editor_inspector_view.h  mv_editor_preview_view.cpp  mv_editor_preview_view.h  mv_editor_scene.cpp  mv_editor_scene.h  mv_editor_side_panel_view.cpp  mv_editor_side_panel_view.h  mv_editor_timeline_view.cpp  mv_editor_timeline_view.h  play_flow_controller.cpp  play_flow_controller.h  play_renderer.cpp  play_renderer.h  play_scene.cpp  play_scene.h  play_session_loader.cpp  play_session_loader.h  play_session_types.h  result_scene.cpp  result_scene.h  scene_common.cpp  scene_common.h  settings_scene.cpp  settings_scene.h  song_create_scene.cpp  song_create_scene.h  song_select_scene.cpp  song_select_scene.h  theme.h  title_scene.cpp  title_scene.h  virtual_screen.cpp  virtual_screen.h
src/services/: content_authorization_service.cpp  content_authorization_service.h  content_sync_service.cpp  content_sync_service.h  managed_content_storage.cpp  managed_content_storage.h  online_content_availability.cpp  online_content_availability.h  ranking_service.cpp  ranking_service.h
src/tests/: audio_manager_smoke.cpp  auth_client_concurrent_restore_smoke.cpp  (+69 more)
tools/: .gitignore  svg2raylib.md  svg2raylib.py
tools/chart_ml/: README.md  pyproject.toml
tools/chart_ml/src/chart_ml/: __main__.py  audio_features.py  cli.py  corpus.py  dataset.py  deep_dataset.py  deep_model.py  deep_training.py  external_4k.py  models.py  rchart.py  simple_model.py  timing.py  timing_utils.py
(+515 files in other folders)
